# pdf-bookletnize

./: README.md  bookletnize.py  pyproject.toml
