[tool.poetry]
name = "pdf-bookletnize"
version = "0.1.0"
description = ""
authors = ["Atsushi Morimoto (74th) <site@74th.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
